# ephemeral_hub

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  netlify.toml  notes_public.md  rust-toolchain.toml
.gh-pages-temp/: index.html
.gh-pages-temp/assets/: ephemeral_web-ab99a5da4d7103fc.js  ephemeral_web-ab99a5da4d7103fc.js.br  ephemeral_web_bg-5446cfdf0d852c59.wasm  ephemeral_web_bg-5446cfdf0d852c59.wasm.br  logo-9fb42ab255d5862b.png.br
.github/workflows/: deploy-frontend-ghpages.yml  deploy-frontend.yml  release.yml
docs/: index.html
ephemeral_backend/: Cargo.toml  Dockerfile  PLAN.md  tests.md
ephemeral_backend/src/: handlers.rs  main.rs  shared_types.rs  websocket.rs
ephemeral_cli/: Cargo.toml  README.md
ephemeral_cli/src/: main.rs
ephemeral_web/: Cargo.toml  Dioxus.toml  _redirects  index.html
ephemeral_web/src/: main.rs
scripts/: deploy-ghpages.sh
