[package]
name = "ephemeral_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.5"
aws-sdk-s3 = "1.102.0"
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["multipart"] }
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
deadpool-redis = "0.22.0"
futures-util = "0.3.31"
http-body-util = { version = "0.1.3", features = ["full"] }
nanoid = "0.4.0"
redis = { version = "0.32.5", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zip = { version = "4.3.0", features = ["bzip2"] }
