[package]
name = "ephemeral_backend"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["multipart"] }
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-redis = { version = "0.22.0", default-features = false, features = [
    "rt_tokio_1-rustls",
] }
redis = { version = "0.32.5", features = ["tokio-comp"] }
futures-util = "0.3.30"
nanoid = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zip = { version = "4.3.0", features = ["bzip2"] }


# AWS SDK crates
aws-config = "1.8.5"
aws-sdk-s3 = "1.102.0"
bytes = "1.10.1"
http-body-util = { version = "0.1.3", features = ["full"] }
