[package]
name = "ephemeral_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
comfy-table = "7.1.4"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
spinners = "4.1.1"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
