[package]
name = "ephemeral_hub"
version = "0.2.0"
edition = "2024"
description = "Ephemeral Hub is a temporary, no-login-required hub for text, files, and collaborative brainstorming. It provides a digital equivalent of a scrap piece of paper or a temporary whiteboard, where all content is automatically deleted after a set time."
license = "MIT"
repository = "https://github.com/seahorse-byte/ephemeral_hub"
homepage = "https://ephemeral-hub.com/"


# This section defines the final executable.
[[bin]]
name = "ephemeral"   # This sets the command name to `ephemeral`
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
comfy-table = "7.1.4"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
spinners = "4.1.1"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
