[package]
name = "ephemeral_web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "document"] }
dioxus-web = "0.6.3"
dioxus-router = "0.6.3"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
serde = { version = "1.0.203", features = ["derive"] }


log = "0.4.21"
wasm-logger = "0.2.0"
futures-util = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
    "Blob",
    "Url",
    "Window",
    "Document",
    "Element",
    "MouseEvent",
    "Navigator",
    "Clipboard",
] }
serde_json = "1.0.142"

gloo-net = "0.5.0"
wasm-bindgen-futures = "0.4.42"
uuid = { version = "1.8.0", features = ["v4", "js"] }
futures = "0.3.31"
wasm-bindgen = "0.2"
